--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 { 
     "prefix": ":",
-    "token": "NzY1Nzg0NDM4MDEyNjQxMjkw.X4Z2VQ.4iU-VgQo2Xln9cdsX1mgi98KFgQ",
+    "token": "",
     "author": "the1scient#9999",
     "cor": "#369fcf",
     "red": "#b70000",
